# go_Sem_work

./: .gitignore  README.md  go.mod  go.sum  main.go
auth/: .env  auth.go  service.go
auth/implementation/: service.go
blog/: pyproject.toml
blog/app/: alembic.ini  database.py  main.py  models.py  repositories.py  schemas.py  settings.py
blog/app/alembic/: env.py
blog/app/alembic/versions/: 2023_12_05-25624ca247ef_.py  2023_12_06-111e3fe99fa7_.py  2023_12_06-4732da1fa57b_.py  2023_12_06-af13fe4c672e_.py
blog/app/static/: styles.css
blog/app/templates/: base.html  create_post.html  signin.html  signup.html
